# Escalonador

./: CMakeLists.txt  Escalonador.sln  escalonador2.sln
Debug/: Escalonador.exe.metagen  Escalonador.ilk
Escalonador/: CPU.hpp  CentralPu.hpp  Core.hpp  Escalonador.vcxproj  Escalonador.vcxproj.filters  Kernel.cpp  Kernel.h  MainScreen.cpp  MainScreen.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  Scheduler.hpp  Simulador.cpp
Escalonador/Debug/: .NETFramework,Version=v4.7.2.AssemblyAttributes.asm  Escalonador.vcxproj.GenerateResource.cache  vc142.idb
Escalonador/Debug/Escalonador.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Escalonador.lastbuildstate  Escalonador.write.1u.tlog  link.10152.delete.1.tlog  link.10524.delete.1.tlog  link.11236.delete.1.tlog  link.12116.delete.1.tlog  link.1220.delete.1.tlog  link.12344.delete.1.tlog  link.12684.delete.1.tlog  link.13048.delete.1.tlog  link.13352.delete.1.tlog  link.1356.delete.1.tlog  link.13716.delete.1.tlog  link.13788.delete.1.tlog  link.13884.delete.1.tlog  link.13936.delete.1.tlog  link.14048.delete.1.tlog  link.14180.delete.1.tlog  link.14244.delete.1.tlog  link.14504.delete.1.tlog  link.14760.delete.1.tlog  link.14896.delete.1.tlog  (+115 more)
ProjetoPooEx/: ProjetoPooEx.vcxproj
escalonador2/: CPU.cpp  CPU.h  Core.cpp  Core.h  Kernel.cpp  Kernel.h  MemoryBlock.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  Simulador.cpp  escalonador2.vcxproj  escalonador2.vcxproj.filters
escalonador2/Debug/: vc142.idb
x64/Debug/: escalonador2.ilk
(+24 files in other folders)
